config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: testapp
  name: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: testapp
    spec:
      containers:
      - image: domintr/test_image:1.0.1
        name: test-image-1.0.1
        resources: {}
status: {}
