config/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: testapp
  name: testapp
spec:
  type: NodePort
  ports:
  - port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app: testapp
